@startuml

skinparam class {
    BackgroundColor<< lib >> white
}

class Animon {
    + getWidth()
    + getHeight()
    + start()
}

class KeyEntity {
    - keyListeners: ArrayList<KeyListener>
    - game: Animon
    + KeyEntity(game: Animon)
    + onKeyPress(key: String)
    + addKeyListener(keyListener: KeyListener)
}

class Player {
    - x: float
    - y: float
    - rightBoundary: int
    - leftBoundary: int
    - upperBoundary: int
    - downBoundary: int
    - spriteResourceIds: int[]
    - spireBitmaps: Bitmap[]
    - game: Animon
    + Player(game: Animon)
    + draw(gv: GameView)
    + onRightKey()
    + onLeftKey()
    + onUpKey()
    + onDownKey()
    + checkCollisions()
    + getX()
    + getY()
}

class Tiles {
    - width: int
    - height: int
    - groundJson: String
    - pathJson: String
    - treesJson: String
    - groundTiles: int[][]
    - pathTiles: int[][]
    - treesTiles: int[][]
    - spriteResourceIds: int[]
    - spriteBitmaps: Bitmap[]
    - game: Animon
    + Tiles(game: Animon)
    + draw(gv: GameView)
    + returnTile(x: float, y: float, layer: int)
    + getWidth()
    + getHeight()
}

class RepeatListener<<lib>> {
    - handler: Handler
    - initialInterval: int
    - normalInterval: int
    - clickListener: OnClickListener
    - touchedView: View
    - handlerRunnable: Runnable
    + RepeatListener(initialInterval: int, normalInterval: int, clickListener OnClickListener)
    + onTouch(view: View, motionEvent: MotionEvent)
}

class MainActivity {
    ~ onCreate(savedInstanceState: Bundle)
    ~ onResume()
    ~ onPause()
}

class Entity<<lib>> {
    + draw(GameView)
    + tick()
    + handleTouch(Touch)
    + getLayer(): int
}

class GameModel<<lib>> {
    - actualWidth
    - actualHeight
    + getWidth()
    + getHeight()
    + start()
    + addEntityEntity)
    + removeEntity(Entity)
    + getEntities(X.class): List<X>
}

class GameView<<lib>> {
    + setGame(GameModel)
    + setPaused(boolean)

    + drawBitmap(...)
    + getCanvas(): Canvas
}


GameModel o-> "*" Entity

GameView --> GameModel

Animon -|> GameModel

Entity <|-- Player
Entity <|-- KeyEntity
Entity <|-- Tiles

MainActivity --> Animon
MainActivity -> GameView


class android.View {
    + onDraw()
}
class android.Activity {
    + onCreate()
    + onResume()
    + onPause()
}
android.Activity <|-- MainActivity
android.View <|-- GameView

@enduml